@@ -1,3 +1,8 @@
+2003/11/21 02:15 (-0500) muppetman
+
+	* xs/GnomeAppHelper.xs, xs/GnomeWindow.xs: shuffle docs around to
+	keep from clobbering docs from other extensions.
+
 2003/11/15 12:13 (+0100) kaffeetisch
 
 	* Gnome2.pm: Add a comma.
